sfSandBoxCode/force-app/main/default/objects/Role_Property_Master_Issues__c/Role_Property_Master_Issues__c.object-meta.xml
<CustomObject>
    <label>Role Property Master Issues</label>
    <nameField>
        <label>Role Property Master Issues Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Role Property Master Issues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>