sfSandBoxCode/force-app/main/default/objects/Role_Property_Master_Issues__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Role Property Master Issues</relationshipLabel>
    <relationshipName>Role_Property_Master_Issues</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>