sfSandBoxCode/force-app/main/default/objects/Role_Property_Master_Issues__c/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <formula>TEXT(Employee__r.Job_Title__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Title</label>
    <type>Text</type>
</CustomField>