sfSandBoxCode/force-app/main/default/objects/Role_Property_Master_Issues__c/fields/Role_Property_Master__c.field-meta.xml
<CustomField>
    <fullName>Role_Property_Master__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Role Property Master</label>
    <referenceTo>Role_Property_Master__c</referenceTo>
    <relationshipLabel>Role Property Master Issues</relationshipLabel>
    <relationshipName>Role_Property_Master_Issues</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>