sfSandBoxCode/force-app/main/default/objects/Role_Property_Master_Issues__c/validationRules/Check_Employee_Title_Matches_RPM.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Employee_Title_Matches_RPM</fullName>
    <active>true</active>
    <description>Check employee title matches the asset that has been issued to them</description>
    <errorConditionFormula>IF(BEGINS(TRIM(Role_Property_Master__r.Name),TRIM(TEXT( Employee__r.Job_Title__c))),1,0)=0</errorConditionFormula>
    <errorMessage>This asset is not available for this Employee</errorMessage>
</ValidationRule>